fix button sizes on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -109,6 +109,9 @@ li {
     #subtitle2 {
         width: 100%;
     }
+    #switchToImage, #switchToPicker {
+        width: 100%;
+    }
     .btn-card {
         width: 90%;
         height: 30vh;
